--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 /* =======================================================
 *
-* 	Template Style 
+* 	Template Style
 *
 * ======================================================= */
 body {
@@ -585,20 +585,22 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .company {
+  font-weight: bold;
   display: block;
   margin-bottom: 20px;
   font-size: 16px;
-  font-weight: normal;
   color: #bfbfbf;
 }
 
 .timeline-body > p,
 .timeline-body > ul {
   margin-bottom: 0;
+  float: left;
 }
 
 .timeline-body > p + p {
   margin-top: 5px;
+
 }
 
 @media (max-width: 992px) {
