--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,14 @@
 @font-face {
   font-family: 'icomoon';
-  src: url("../fonts/icomoon/icomoon.eot?srf3rx");
-  src: url("../fonts/icomoon/icomoon.eot?srf3rx#iefix") format("embedded-opentype"), url("../fonts/icomoon/icomoon.ttf?srf3rx") format("truetype"), url("../fonts/icomoon/icomoon.woff?srf3rx") format("woff"), url("../fonts/icomoon/icomoon.svg?srf3rx#icomoon") format("svg");
+  src:  url('../fonts/icomoon.eot?cfjdq4');
+  src:  url('../fonts/icomoon.eot?cfjdq4#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?cfjdq4') format('truetype'),
+    url('../fonts/icomoon.woff?cfjdq4') format('woff'),
+    url('../fonts/icomoon.svg?cfjdq4#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
+
 /* =======================================================
 *
 * 	Template Style
