--- a/css/style.css
+++ b/css/style.css
@@ -595,7 +595,7 @@ h1, h2, h3, h4, h5, h6, figure {
 .timeline-body > p,
 .timeline-body > ul {
   margin-bottom: 0;
-  float:
+  align-items: center;
 }
 
 .timeline-body > p + p {
